# Streamline_Sample

./: .gitattributes  CMakeLists.txt  README.md  VKpatch.patch  build.bat  install.bat  make.bat  release.txt  run.bat
donut/: CMakeLists.txt  LICENSE.txt  README.md  ThirdPartyLicenses.txt  compileshaders.cmake  donut-app.cmake  donut-core.cmake  donut-engine.cmake  donut-render.cmake  donut.natvis
donut/cmake/: FindAssimp.cmake  FindDXCdxil.cmake  FindDXCspirv.cmake  FindFXC.cmake
donut/include/donut/app/: ApplicationBase.h  Camera.h  DeviceManager.h  Timer.h  UserInterfaceUtils.h  imgui_nvrhi.h  imgui_renderer.h
donut/include/donut/core/: circular_buffer.h  json.h  log.h  taskgroup.h
donut/include/donut/engine/: AudioCache.h  AudioEngine.h  BindingCache.h  CommonRenderPasses.h  DDSFile.h  DescriptorTableManager.h  FramebufferFactory.h  GltfImporter.h  IesProfile.h  KeyframeAnimation.h  MaterialBindingCache.h  ObjectFile.h  Scene.h  SceneGraph.h  SceneTypes.h  ShaderFactory.h  ShadowMap.h  TextureCache.h  View.h
donut/include/donut/render/: BloomPass.h  CascadedShadowMap.h  DeferredLightingPass.h  DepthPass.h  DrawStrategy.h  EnvironmentMapPass.h  ForwardShadingPass.h  GBuffer.h  GBufferFillPass.h  GeometryPasses.h  JointsRenderPass.h  LightProbeProcessingPass.h  MipMapGenPass.h  NGXAdjustmentPasses.h  PixelReadbackPass.h  PlanarShadowMap.h  SkyPass.h  SsaoPass.h  TemporalAntiAliasingPass.h  ToneMappingPasses.h
donut/include/donut/shaders/: atmospheric.hlsli  bindless.h  blit_cb.h  bloom_cb.h  brdf.hlsli  deferred_lighting_cb.h  depth_cb.h  forward_cb.h  forward_vertex.hlsli  gbuffer.hlsli  gbuffer_cb.h  light_cb.h  light_probe_cb.h  light_types.h  lighting.hlsli  material_bindings.hlsli  material_cb.h  mipmapgen_cb.h  motion_vectors.hlsli  ngx_adjust_cb.h  packing.hlsli  pixel_readback_cb.h  scene_material.hlsli  shadows.hlsli  skinning_cb.h  sky.hlsli  sky_cb.h  ssao_cb.h  surface.hlsli  taa_cb.h  tonemapping_cb.h  utils.hlsli  view_cb.h  voxelization_cb.h  vulkan.hlsli
donut/lib/: jsoncpp.lib
donut/nvrhi/: CLA.txt  CMakeLists.txt  README.md  ThirdPartyLicenses.txt
donut/nvrhi/cmake/: FindNVAPI.cmake  FindVulkan.cmake
donut/nvrhi/doc/: ProgrammingGuide.md  Tutorial.md
donut/nvrhi/include/nvrhi/: d3d11.h  d3d12.h  nvrhi.h  utils.h  validation.h  vulkan.h
donut/nvrhi/rtxmu/: CMakeLists.txt  LICENSE.txt  NVIDIA_CLA_v1.0.1.txt  README.md
donut/nvrhi/rtxmu/src/: D3D12AccelStructManager.cpp  D3D12Suballocator.cpp  VkAccelStructManager.cpp  VulkanSuballocator.cpp
donut/nvrhi/src/: nvrhiConfig.cmake.in
donut/nvrhi/src/common/: alloc.cpp  crc.cpp  dxgi-format.cpp  dxgi-format.h  format-info.cpp  misc.cpp  shader-blob.cpp  stacktrace.cpp  state-tracking.cpp  state-tracking.h  utils.cpp  versioning.h
donut/nvrhi/src/d3d11/: d3d11-backend.h  d3d11-buffer.cpp  d3d11-commandlist.cpp  d3d11-compute.cpp  d3d11-constants.cpp  d3d11-device.cpp  d3d11-graphics.cpp  d3d11-queries.cpp  d3d11-resource-bindings.cpp  d3d11-shader.cpp  d3d11-texture.cpp  d3d11.cpp  queries.cpp  resourcebindings.cpp
donut/nvrhi/src/d3d12/: commandlist.cpp  d3d12-backend.h  d3d12-buffer.cpp  d3d12-commandlist.cpp  d3d12-compute.cpp  d3d12-constants.cpp  d3d12-descriptor-heap.cpp  d3d12-device.cpp  d3d12-graphics.cpp  d3d12-meshlets.cpp  d3d12-queries.cpp  d3d12-raytracing.cpp  d3d12-resource-bindings.cpp  d3d12-shader.cpp  d3d12-state-tracking.cpp  d3d12-texture.cpp  d3d12-upload.cpp  d3d12.cpp  dxr.cpp
donut/nvrhi/src/validation/: commandlist.cpp  device.cpp  validation-backend.h  validation-commandlist.cpp  validation-device.cpp
donut/nvrhi/src/vulkan/: allocator.cpp  buffer.cpp  compute.cpp  constants.cpp  draw.cpp  queries.cpp  queue.cpp  renderer.cpp  resourcebindings.cpp  shader.cpp  stagingtexture.cpp  sync.cpp  texture.cpp  vulkan-allocator.cpp  vulkan-backend.h  vulkan-buffer.cpp  vulkan-commandlist.cpp  vulkan-compute.cpp  (+14 more)
donut/nvrhi/tools/: nvrhi.natvis
donut/scripts/: CompileShaders.py  lz4_tar.py  mat_to_gltf.py  pack_media.py
donut/shaders/: CMakeLists.txt  DonutShaders.cfg  blit_array_ps.hlsl  blit_ps.hlsl  fullscreen_vs.hlsl  ies_profile_cs.hlsl  imgui_pixel.hlsl  imgui_vertex.hlsl  rect_vs.hlsl  sharpen_ps.hlsl  skinning_cs.hlsl
donut/shaders/passes/: bloom_ps.hlsl  cubemap_gs.hlsl  deferred_lighting_cs.hlsl  deferred_lighting_ps.hlsl  depth_ps.hlsl  depth_vs.hlsl  environment_map_ps.hlsl  exposure_cs.hlsl  forward_gs.hlsl  forward_ps.hlsl  forward_vs.hlsl  gbuffer_ps.hlsl  gbuffer_vs.hlsl  histogram_cs.hlsl  joints.hlsl  light_probe.hlsl  material_id_ps.hlsl  mipmapgen_cs.hlsl  motion_vectors_ps.hlsl  ngx_adjust_ps.hlsl  pixel_readback_cs.hlsl  sky_ps.hlsl  ssao_blur_cs.hlsl  ssao_compute_cs.hlsl  ssao_deinterleave_cs.hlsl  ssao_ps.hlsl  taa_cs.hlsl  tonemapping_ps.hlsl
donut/src/app/: ApplicationBase.cpp  Camera.cpp  DeviceManager.cpp  MediaFileSystem.cpp  UserInterfaceUtils.cpp  imgui_console.cpp  imgui_nvrhi.cpp  imgui_renderer.cpp
donut/src/core/: json.cpp  log.cpp  string_utils.cpp  taskgroup.cpp
donut/src/engine/: AudioCache.cpp  AudioEngine.cpp  BindingCache.cpp  CommonRenderPasses.cpp  ConsoleObjects.cpp  DDSFile.cpp  DescriptorTableManager.cpp  FramebufferFactory.cpp  GltfImporter.cpp  IesProfile.cpp  KeyframeAnimation.cpp  Material.cpp  MaterialBindingCache.cpp  ObjectFile.cpp  Scene.cpp  SceneGraph.cpp  SceneTypes.cpp  ShaderFactory.cpp  TextureCache.cpp  View.cpp  dds.h  stb_impl.c
donut/src/render/: BloomPass.cpp  CascadedShadowMap.cpp  DeferredLightingPass.cpp  DepthPass.cpp  DrawStrategy.cpp  EnvironmentMapPass.cpp  ForwardShadingPass.cpp  GBuffer.cpp  GBufferFillPass.cpp  GeometryPasses.cpp  JointsRenderPass.cpp  LightProbeProcessingPass.cpp  MipMapGenPass.cpp  NGXAdjustmentPasses.cpp  PixelReadbackPass.cpp  PlanarShadowMap.cpp  SkyPass.cpp  SsaoPass.cpp  TemporalAntiAliasingPass.cpp  ToneMappingPasses.cpp
donut/tests/: CMakeLists.txt  test-core.cmake  test-engine.cmake
donut/tests/src/: utils.cpp
sl_demo/: CMakeLists.txt  DemoMain.cpp  SLWrapper.cpp  SLWrapper.h  secureLoadLibrary.cpp
sl_demo/glue/: RenderTargets.h  UIRenderer.h
(+117 files in other folders)
